--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ p{
   background-repeat: no-repeat;
   background-size: cover;
 opacity: 1;
-  height: 667px;
+  height: 99%;
   margin: 0;
   color: white;
   z-index:0;
