--- a/css/styleadmin.css
+++ b/css/styleadmin.css
@@ -25,7 +25,7 @@ font-family: 'Avara-Black';
 }
 .bg{
 
-  background-image:url('img/fond.png');
+  background-image:url('img/fond.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
